# example-c-plugin

./: .gitignore  CONTRIBUTING.md  Makefile.am  README.md  configure.ac
src/: main.c  plugin_json.c  plugin_xml.c
